--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li id="servicer">MY<span style="color: blue;">SERVISER</span> </li>
+            <div class="list">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#About">About</a></li>
+                <li><a href="#how it works">How it works</a></li>
+                <button id="btn">REQUEST</button>
+            </div>
+        </ul>
+    </nav>
 </body>
 </html>
