add two buttons under class container

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
         </ul>
     </nav>
     <div class="container">
-        
+        <div>
+            <h1 style="color: white; padding-top: 100px;font-size: 60px;">World's Most Professional<br>Customer Service</h1>
+            <p style="color: white; font-size: 25px; margin-top: 20px;">Our technicians have decades of practical, in-field experiences besides factory training. This means they<br>have the knowkedge and skills needed to diagnose and repair any appliances you may have.</p>
+        </div>
+        <div>
+            <button id="but"> OUR SERVICES</button>
+              <button id="touch">GET IN TOUCH</button>
+      </div>
     </div>
 </body>
 </html>
