--- a/index.html
+++ b/index.html
@@ -39,5 +39,11 @@
             a document or a typeface without relying on meaningful content.<br><br>
         Lorem ipsum may</p><br><br><br>
     </div>
+    <button id="get">GET STARTED</button>
+</div>
+<div id="image">
+    <img style="height: 600px;width: 800px; "src="images/image 1.png" alt="">
+</div>
+</div>
 </body>
 </html>
