ceate div of class container3

--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
     Services at Fair Prices</h1><br><br>
     <button id="in">GET IN TOUCH</button>
 </div>
+<div class="container3">
 </body>
 </html>
