create three under div class container 3 divs and add elements onto them

--- a/index.html
+++ b/index.html
@@ -52,5 +52,24 @@
     <button id="in">GET IN TOUCH</button>
 </div>
 <div class="container3">
+    <div class="our">
+        <h1>Our Services</h1>
+        </div>
+        <div class="air">
+        <div class="box">
+            <img id="img" src="images/Rectangle 7.png" alt="">
+            <h2>Airline Services</h2>
+            <p>Our qualified team strives for ensuring your<br> satisfaction, while offering the highest<br> levels of</p>
+        </div>
+        <div class="box"><img id="img" src="images/Rectangle 7.png" alt="">
+            <h2>Airline Services</h2>
+            <p>Our qualified team strives for ensuring your<br> satisfaction, while offering the highest<br> levels of</p>
+        </div>
+        <div class="box"><img id="img" src="images/Rectangle 7.png" alt="">
+            <h2>Airline Services</h2>
+            <p>Our qualified team strives for ensuring your<br> satisfaction, while offering the highest<br> levels of</p>
+        </div>
+        </div>
+
 </body>
 </html>
