--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <p>Our qualified team strives for ensuring your<br> satisfaction, while offering the highest<br> levels of</p>
         </div>
         </div>
+    </div>
 
 </body>
 </html>
