--- a/index.html
+++ b/index.html
@@ -83,6 +83,16 @@
     <h3>Email:</h3>
     <p>sim@moringa.com</p>
         </div>
-
+        <div class="getin">
+            <h3>Get in touch with us</h3>
+            <label for="Username">Username</label><br>
+        <input type="text" id="Username" value="username"><br><br><br>
+        <label for="Email">Email</label><br>
+        <input type="text" id="Email" value="example@gmail.com"><br><br><br><br>
+        <label for="Message">Message</label><br>
+        <input type="text" id="Message" value="write your message here"><br><br><br><br><br>
+        <input type="submit" id="submit" value="Send Message">
+        </div>
+    </div>
 </body>
 </html>
