--- a/index.html
+++ b/index.html
@@ -94,5 +94,8 @@
         <input type="submit" id="submit" value="Send Message">
         </div>
     </div>
+    <footer>
+        <p>@2021 MYSERVICE.All Rights Reserved. Privacy Policy</p>
+    </footer>
 </body>
 </html>
